# Agentic-AI-Nurse-CrewAI

./: .gitignore  README.md  check_import.py  copy_package.py  test_json_parse.py  test_newline_json.py  verify_hashing.py
AI_Agents/: main.py
AI_Agents/src/: tasks.py
Backend/: .env.example  Procfile  add_med_logs.py  check_and_fix_db.py  check_db.py  check_db_history.py  check_db_simple_2.py  check_user_data.py  debug_paths.py  debug_roles.py  fix_db_simple.py  fix_roles.py  force_fix_schema.py  force_rename.py  init_database.py  main.py  mcp_server.py  reproduce_issue.py  requirements.txt  test_imports.py  test_med_log.py  websocket_manager.py
Backend/AI_Agents/: pyproject.toml  requirements.txt
Backend/AI_Agents/src/: agents.py  crew.py  tasks.py  tools.py  tools_new.py
Backend/MCP/: mcp_client.py  mcp_server.py
Backend/Platform/: main.py  reproduce_issue.py  scheduler.py  severity_engine.py  websocket_manager.py
Backend/auth/: __init__.py  dependencies.py  schemas.py  security.py
Backend/database/: models.py  session.py
Backend/routes/: auth.py  dashboard.py  patients.py  reminders.py
Backend/scripts/: add_medication_split_status.py  create_notification_tables.py  create_telemetry_table.py  db_diagnostics.py  full_db_reset.py  recreate_reminders.py  reset_admin_password.py  reset_db.py  test_push_service.py  test_render_push.py  verify_rag.py  verify_tools.py
Backend/tests/: test_async_hitl.py  test_rag_standalone.py
Frontend/: index.html  package.json  vite.config.js
Frontend/public/: firebase-messaging-sw.js
src/: agents.py  crew.py
(+64 files in other folders)
